syntax = "proto3";

package booking.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/igor-baiborodine/api/booking_v1";

service Log {
  rpc Produce(ProduceRequest) returns (ProduceResponse) {}
  rpc Consume(ConsumeRequest) returns (ConsumeResponse) {}
  rpc ConsumeStream(ConsumeRequest) returns (stream ConsumeResponse) {}
  rpc ProduceStream(stream ProduceRequest) returns (stream ProduceResponse) {}
}

message ProduceRequest  {
  Record record = 1;
}

message ProduceResponse  {
  uint64 offset = 1;
}

message ConsumeRequest {
  uint64 offset = 1;
}

message ConsumeResponse {
  Record record = 1;
}

message Record {
  uint64 offset = 1;
  bytes value = 2;
}

message Booking {
  string uuid = 1;
  string email = 2;
  string fullName = 3;
  string startDate = 4;
  string endDate = 5;
  bool   active = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}